--- a/docs/css/styleTies.css
+++ b/docs/css/styleTies.css
@@ -8,5 +8,16 @@
 }
 
 .bannerStyle {
-  max-height: 600px;
+  width: 100%;
+  height: 100%;
+}
+
+.bannerImgContainerLG {
+  width: 70vw;
+  height: 44.35vw;
+}
+
+.bannerImgContainer {
+  width: 100vw;
+  height: 63.36vw;
 }
